--- a/index.html
+++ b/index.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
     <body>
-        <header>
-            <h1>Cake Factory</h1>    
-        </header>
+        <head>
+            <meta charset="utf-8" />
+            <meta name="viewport" content="width=device-width">
+            <title>Wireframe</title>
+            <link rel="stylesheet" href="style.css" />
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital@1&display=swap" rel="stylesheet">
+
+                
+            </head>
+            <header>
+                <h1>Cake Factory</h1>
+            </header>
         <main>
 
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, facilis.</p>
